스프린트6-13 : Channel생성 관련 로직 수정